--- a/u5a5_usbx_host_msc_standalone.ioc
+++ b/u5a5_usbx_host_msc_standalone.ioc
@@ -31,9 +31,10 @@ Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
 Mcu.Pin10=VP_USBX_UX Host CoreStack_HS
 Mcu.Pin11=VP_USBX_UX Host Controller_HS
-Mcu.Pin12=VP_LPBAM_VS_SIG1
-Mcu.Pin13=VP_LPBAM_VS_SIG4
-Mcu.Pin14=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin12=VP_USBX_UX Host MSC_HS
+Mcu.Pin13=VP_LPBAM_VS_SIG1
+Mcu.Pin14=VP_LPBAM_VS_SIG4
+Mcu.Pin15=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin2=PA11
 Mcu.Pin3=PA12
 Mcu.Pin4=VP_FILEX_VS_FileOoSystemJjFileXJjCore
@@ -42,7 +43,7 @@ Mcu.Pin6=VP_LPBAMQUEUE_VS_QUEUE
 Mcu.Pin7=VP_PWR_VS_SECSignals
 Mcu.Pin8=VP_SYS_VS_Systick
 Mcu.Pin9=VP_USBX_Core_System
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U5A5ZJTxQ
@@ -101,7 +102,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-false-HAL-true,4-MX_FileX_Init-FILEX-false-HAL-false,5-MX_USBX_Init-USBX-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_OTG_HS_HCD_Init-USB_OTG_HS-true-HAL-true,4-MX_FileX_Init-FILEX-false-HAL-false,5-MX_USBX_Init-USBX-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -177,11 +178,12 @@ RCC.VCOOutputFreq_Value=160000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 USBX.Core_System=1
-USBX.IPParameters=Core_System,UX_Host_CoreStack,UX_Host_Controller,UX_HOST_APP_MEM_POOL_SIZE_STANDALONE,USBX_HOST_SYS_SIZE
+USBX.IPParameters=Core_System,UX_Host_CoreStack,UX_Host_Controller,UX_HOST_APP_MEM_POOL_SIZE_STANDALONE,USBX_HOST_SYS_SIZE,UX_Host_MSC
 USBX.USBX_HOST_SYS_SIZE=1024*9
 USBX.UX_HOST_APP_MEM_POOL_SIZE_STANDALONE=1024*10
 USBX.UX_Host_Controller=1
 USBX.UX_Host_CoreStack=1
+USBX.UX_Host_MSC=1
 USB_OTG_HS.IPParameters=VirtualMode
 USB_OTG_HS.VirtualMode=Host_HS
 VP_FILEX_VS_CustomOointerface.Mode=Custom_interface
@@ -206,4 +208,6 @@ VP_USBX_UX\ Host\ Controller_HS.Mode=UX_Host_Controller_HS
 VP_USBX_UX\ Host\ Controller_HS.Signal=USBX_UX Host Controller_HS
 VP_USBX_UX\ Host\ CoreStack_HS.Mode=UX_Host_CoreStack_HS
 VP_USBX_UX\ Host\ CoreStack_HS.Signal=USBX_UX Host CoreStack_HS
+VP_USBX_UX\ Host\ MSC_HS.Mode=UX_Host_MSC_HS
+VP_USBX_UX\ Host\ MSC_HS.Signal=USBX_UX Host MSC_HS
 board=custom
